# empirical-analysis-face-detection

./: .gitignore  README.md  add_person.py  app.py  base_engine.py  benchmark_haar.py  config.py  face_recog.py.bak  gui.py  gui.py.bak  pyproject.toml  recog_eigen.py  recog_fisher.py  recog_lbph.py  recog_logic.py  train_eigen.py  train_fisher.py  train_lbph.py  training_logic.py
